--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon --exec babel-node server.js"
+    "dev": "nodemon --exec babel-node server.js",
+    "start": "nodemon --exec babel-node server.js"
   },
   "dependencies": {
     "@babel/core": "^7.22.10",
